syntax = "proto3";

option csharp_namespace = "tx";

package shelf;

service Shelf {
	rpc GetCabinet (GetCabinetRequest) returns (GetCabinetReply);
	rpc GetRow (GetRowRequest) returns (GetRowReply);
	rpc GetLane (GetLaneRequest) returns (GetLaneReply);
}

message GetCabinetRequest {
	repeated uint64 Numbers = 1;
}

message GetCabinetReply {
	repeated Cabinet Cabinets = 1;
}

message GetRowRequest {
	uint64 CabinetNumber = 1;
	uint64 RowNumber = 2;
}

message GetRowReply {
	optional Row Row = 1;
}

message GetLaneRequest {
	uint64 CabinetNumber = 1;
	uint64 RowNumber = 2;
	uint64 LaneNumber = 3;
}

message GetLaneReply {
	optional Lane Lane = 1;
}

message Cabinet {
	uint64 Number = 1;
	repeated uint64 Rows = 2;
	Position Position = 3;
	Size Size = 4;
}

message Row {
	uint64 Number = 1;
	repeated uint64 Lanes = 2;
	float PositionZ = 3;
	uint32 Height = 4;
}

message Lane {
	uint64 Number = 1;
	string JanCode = 2;
	uint32 Quantity = 3;
	int32 PositionX = 4;
}

message Position {
	int32 X = 1;
	int32 Y = 2;
	int32 Z = 3;
}

message Size {
	uint32 Width = 1;
	uint32 Depth = 2;
	uint32 Height = 3;
}
